--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -2549,6 +2549,14 @@
     "context": "weight",
     "string": "{value} {unit}"
   },
+  "src_dot_components_dot_messages_dot_hideError": {
+    "context": "hide error log label in notification",
+    "string": "Hide log"
+  },
+  "src_dot_components_dot_messages_dot_seeError": {
+    "context": "see error log label in notification",
+    "string": "See error log"
+  },
   "src_dot_configuration": {
     "context": "configuration section name",
     "string": "Configuration"
@@ -2850,6 +2858,9 @@
   },
   "src_dot_date": {
     "string": "Date"
+  },
+  "src_dot_defaultErrorTitle": {
+    "string": "Something went wrong"
   },
   "src_dot_delete": {
     "context": "button",
