Use explicit translation, bump macaw to latest release

--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -507,6 +507,10 @@
     "context": "button",
     "string": "Accept"
   },
+  "src_dot_appExtensions": {
+    "context": "app extensions subsection",
+    "string": "Apps"
+  },
   "src_dot_approve": {
     "context": "button",
     "string": "Approve"
