Change extensions naming (#1885)
* Change extensions to apps

* Update translations

* Use explicit translation, bump macaw to latest release

--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -507,6 +507,10 @@
     "context": "button",
     "string": "Accept"
   },
+  "src_dot_appExtensions": {
+    "context": "app extensions subsection",
+    "string": "Apps"
+  },
   "src_dot_approve": {
     "context": "button",
     "string": "Approve"
@@ -3522,9 +3526,6 @@
   "src_dot_exchangeRates": {
     "context": "Manage and Update your warehouse information",
     "string": "Exchange Rates"
-  },
-  "src_dot_extensions": {
-    "string": "Extensions"
   },
   "src_dot_firstName": {
     "string": "First Name"
