Fix typo: "infomation" → "information"

--- a/locale/fa.json
+++ b/locale/fa.json
@@ -2274,7 +2274,7 @@
     "string": "یادداشت"
   },
   "src_dot_customers_dot_components_dot_CustomerCreateNote_dot_932844352": {
-    "string": "Enter any extra infotmation regarding this customer."
+    "string": "Enter any extra information regarding this customer."
   },
   "src_dot_customers_dot_components_dot_CustomerCreatePage_dot_4025686004": {
     "context": "page header",
