--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -2237,9 +2237,17 @@
     "context": "ExitFormPrompt confirm button",
     "string": "Save changes"
   },
+  "src_dot_components_dot_Form_dot_continueEditingButton": {
+    "context": "ExitFormPrompt continue editing button",
+    "string": "Continue editing"
+  },
   "src_dot_components_dot_Form_dot_title": {
     "context": "ExitFormPrompt title",
     "string": "Would you like to save changes?"
+  },
+  "src_dot_components_dot_Form_dot_unableToSaveTitle": {
+    "context": "ExitFormPrompt title",
+    "string": "You have unsaved changes"
   },
   "src_dot_components_dot_ImageUpload_dot_1731007575": {
     "context": "image upload",
