--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6839,9 +6839,9 @@
     "context": "tabel column header",
     "string": "Selling Price"
   },
-  "src_dot_products_dot_components_dot_ProductVariantPrice_dot_2051669917": {
+  "src_dot_products_dot_components_dot_ProductVariantPrice_dot_2644882304": {
     "context": "tabel column header",
-    "string": "Cost Price"
+    "string": "Cost"
   },
   "src_dot_products_dot_components_dot_ProductVariantPrice_dot_3211447524": {
     "context": "info text",
