--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6854,6 +6854,10 @@
   "src_dot_products_dot_components_dot_ProductVariantPrice_dot_4097816011": {
     "string": "No channels found"
   },
+  "src_dot_products_dot_components_dot_ProductVariantPrice_dot_819659341": {
+    "context": "tabel column header",
+    "string": "Cost price"
+  },
   "src_dot_products_dot_components_dot_ProductVariantSetDefault_dot_3683859003": {
     "context": "set variant as default, button",
     "string": "Set as default"
